--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "numpy>=2.3.0",
+    "opencv-python>=4.11.0.86",
+    "pandas>=2.3.0",
+    "pypylon>=4.2.0",
+    "pyqtgraph>=0.13.7",
     "pyserial>=3.5",
     "pyside6>=6.9.1",
+    "pyusb>=1.3.1",
+    "pyvisa-py>=0.8.0",
 ]
